# youtube-dlp-subscriptions

./: README.md  dl  dl.py  pyproject.toml
app/: dl.py
