[tool.poetry]
name = "youtube-dlp-subscriptions"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
yt-dlp = "^2022.5.18"
opml = "^0.5"
feedparser = "^6.0.10"

[tool.poetry.dev-dependencies]
pylint = "^2.14.0"
mypy = "^0.960"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
